Add form validation (with german messages)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="8`LeqcjDrHypVbxr;^iSWo2]@eeoX[K?Recw;Uc<iaOZ6XjFbbSxQhgKaYHg
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="de"
 
 # Global object class
 # ~~~~~
