Adds mailer plugin

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -45,3 +45,10 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Mailer
+# ~~~~~
+smtp.host=smtp.gmail.com
+smtp.ssl=yes
+smtp.tls=no
+smtp.user="rahel.luethy@gmail.com"
+smtp.password=""
