Migrate to latest Scala/Play/sbt/Plugin versions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,8 +47,4 @@ logger.application=DEBUG
 
 # Mailer
 # ~~~~~
-smtp.host=smtp.gmail.com
-smtp.ssl=yes
-smtp.tls=no
-smtp.user="rahel.luethy@gmail.com"
-smtp.password=""
+smtp.mock=true
